Made form invisible

--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -269,6 +269,10 @@ label {
     pointer-events: initial;
 }
 
+#order-form {
+    display: none;
+}
+
 /* -------------- *
  * Cart Item
  * -------------- */
