--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -424,6 +424,10 @@ label {
     top: 15px;
     right: 15px;
     z-index: 1101;
+    padding: 5px;
+    background-color: white;
+    border-radius: 100%;
+    
 }
 
 .food-panel-body {
