--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -280,12 +280,14 @@ label {
     display: flex;
     align-items: center;
     border-bottom: 1px solid #ccc;
-    padding-bottom: 10px;
+    padding: 5px 0;
 }
 
 .cart-item-image {
     width: 80px;
+    height: 80px;
     margin-right: 15px;
+    border-radius: 10px;
 }
 
 .cart-item-details {
@@ -354,8 +356,6 @@ label {
     width: 40%;
     height: 100%;
     border-right: 1px solid #ddd;
-    justify-content: center;
-    align-items: center;
 }
 
 .card-body {
