--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -419,7 +419,7 @@ label {
     transform: translate(-50%, -50%);
     height: calc(100% - 100px);
     background-color: white;
-    width: 450px;
+    width: 600px;
     border-radius: 10px;
     z-index: 1100;
     opacity: 0;
@@ -456,9 +456,7 @@ label {
 }
 
 .food-panel-body img {
-    max-height: 300px;
     width: 100%;
-    height: auto;
     border-radius: 10px;
 }
 
@@ -481,6 +479,10 @@ label {
   
 .food-desc {
     padding: 0 20px;
+}
+
+#food-price {
+    display: none;
 }
 
 .food-panel-footer {
