--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -181,7 +181,7 @@ body.no-scroll {
 .cart-panel {
     position: fixed;
     top: 10px;
-    right: -510px;
+    right: -750px;
     width: 500px;
     height: calc(100% - 20px);
     background-color: white;
@@ -393,22 +393,6 @@ label {
     max-width: 450px;
 }
 
-@media (max-width: 991.98px) {
-    .card {
-        height: 150px;
-    }
-}
-
-@media (max-width: 767.98px) {
-    .row {
-        width: 450px;
-    }
-
-    .wrap-text {
-        display: block;
-    }
-}
-
 /* -------------- *
  * Food Panel
  * -------------- */
@@ -616,5 +600,25 @@ label {
     #cart-count {
         position: absolute;
         top: 24px;
+    }
+}
+
+@media (max-width: 991.98px) {
+    .card {
+        height: 150px;
+    }
+}
+
+@media (max-width: 767.98px) {
+    .row {
+        width: 450px;
+    }
+
+    .wrap-text {
+        display: block;
+    }
+
+    .cart-panel, .food-panel {
+        width: 80%;
     }
 }
