--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -115,7 +115,7 @@ body.no-scroll {
     opacity: 1;
     pointer-events: auto;
     padding-left: 40px;
-    padding-right: 10px;
+    padding-right: 30px;
 }
 
 .search-input:focus {
@@ -144,6 +144,31 @@ body.no-scroll {
 
 .search-container.active:hover .search-icon i:hover {
     border: 2px solid transparent;
+}
+
+/* -------------- *
+ * Cuisine Filter
+ * -------------- */
+.dropdown-icon {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    font-size: 1.5rem;
+    color: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.4s ease;
+}
+
+.search-container.active .dropdown-icon {
+    opacity: 1;
+    pointer-events: auto;
+}
+
+.dropdown-icon i:hover {
+    color: #333;
+    cursor: pointer;
 }
 
 /* -------------- *
@@ -585,7 +610,11 @@ label {
         width: 200px;
         opacity: 1;
         pointer-events: auto;
-        transition: none;
+    }
+
+    .dropdown-icon {
+        opacity: 1;
+        pointer-events: auto;
     }
 
     .cart-container {
