--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -654,6 +654,7 @@ label {
     .search-input {
         padding-left: 40px;
         padding-right: 10px;
+        transition: none;
     }
 
     .search-icon {
