--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -359,20 +359,40 @@ label {
     flex-grow: 1;
 }
 
+.cart-item-details * {
+    margin-bottom: 0.25rem;
+}
+
 .cart-item-quantity {
     display: flex;
 }
 
 .cart-item-quantity button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 30px;
     height: 30px;
     border: 1px solid #ddd;
     border-radius: 5px;
     font-size: 1.25rem;
     cursor: pointer;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.cart-item-quantity i {
     display: flex;
     align-items: center;
     justify-content: center;
+    transform: scaleX(1.4) scaleY(1.2);
+    padding-right: 5px;
+    padding-left: 7px;
+    font-size: 1.25rem;
+    cursor: pointer;
+}
+
+.cart-item-quantity i:hover {
+    color: red;
 }
 
 .cart-item-quantity button:hover {
@@ -384,6 +404,10 @@ label {
     font-weight: bold;
     min-width: 30px;
     text-align: center;
+}
+
+.cart-item-addons {
+    color: gray
 }
 
 .cart-item-price h5 {
@@ -543,6 +567,13 @@ label {
 
 #food-price {
     display: none;
+}
+
+.food-addons-label {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    margin-bottom: 5px;
 }
 
 .food-panel-footer {
