--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -449,7 +449,7 @@ label {
     border-radius: 5px;
     height: 175px;
     overflow: hidden;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    transition: box-shadow 0.3s ease;
     cursor: pointer;
 }
 
@@ -490,6 +490,10 @@ label {
 
 .card-text {
     font-size: 0.9rem;
+    margin-bottom: 0.5rem;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 /* -------------- *
