--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -458,18 +458,6 @@ label {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.card-top {
-    position: absolute;
-    top: 5px;
-    right: 5px;
-    z-index: 10;
-}
-
-.fav-icon {
-    color: gold;
-    font-size: 1.25rem;
-}
-
 .card-img {
     width: 40%;
     height: 100%;
@@ -494,6 +482,43 @@ label {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+.card-bottom {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: 10;
+}
+
+.cuisine-triangle {
+    border-top: 15px solid transparent;
+    border-right: 15px solid #FF6347;
+    border-bottom: 15px solid #FF6347;
+    border-left: 15px solid transparent;
+    position: relative;
+}
+
+.cuisine-triangle::after {
+    content: attr(data-tooltip);
+    position: absolute;
+    bottom: 0px;
+    left: 50%;
+    transform: translateX(-100%);
+    padding: 5px 10px;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    border-radius: 10px;
+    font-size: 1rem;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+    pointer-events: none;
+}
+
+.cuisine-triangle:hover::after {
+    opacity: 1;
+    visibility: visible;
 }
 
 /* -------------- *
