--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -598,6 +598,28 @@ label {
     display: none;
 }
 
+.food-instructions-container {
+    margin-bottom: 1rem;
+}
+
+.food-instructions-container .hidden {
+    display: none;
+}
+
+.food-instructions-btn {
+    background-color: #E0E0E0;
+    padding: 8px 16px;
+    font-size: 1rem;
+    cursor: pointer;
+    border: none;
+    border-radius: 10px;
+    margin-bottom: 0.5rem;
+}
+
+.food-instructions-btn:hover {
+    background-color: #E0E0E0;
+}
+
 .food-addons-label {
     display: flex;
     align-items: center;
