--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -22,6 +22,14 @@ body.no-scroll {
     overflow: hidden;
 }
 
+input[type="checkbox"] {
+    accent-color: #E0E0E0
+}
+
+label {
+    padding-left: 5px;
+}
+
 .black-overlay {
     display: none;
     position: fixed;
@@ -373,6 +381,7 @@ label {
     justify-content: center;
     width: 30px;
     height: 30px;
+    color: black;
     border: 1px solid #ddd;
     border-radius: 5px;
     font-size: 1.25rem;
@@ -608,6 +617,7 @@ label {
 
 .food-instructions-btn {
     background-color: #E0E0E0;
+    color: black;
     padding: 8px 16px;
     font-size: 1rem;
     cursor: pointer;
