--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,7 +12,7 @@ html {
 
 body {
   overscroll-behavior: none;
-  /*background: #2c2c2c !important;*/
+  background-color: black;
 }
 
 .nowrap {
@@ -107,7 +107,7 @@ body {
  * Nav Bar
  * -------------- */
 .navbar {
-  padding: 0 !important;
+  padding: 0;
 }
 
 .transparent-navbar {
@@ -119,33 +119,31 @@ body {
   background-color: #131313;
 }
 
-.navbar-brand {
-  padding-top: 0.5rem !important;
-  padding-bottom: 0.5rem !important;
-}
-
 .navbar-expand-lg .navbar-nav .nav-link {
-  padding-right: 1rem !important;
-  padding-left: 1rem !important;
+  padding-right: 1rem;
+  padding-left: 1rem;
 }
 
 .nav-link {
   padding: 10px 15px;
   font-size: 1.25rem;
   background-color: transparent;
-  color: white !important;
   text-decoration: none;
   cursor: pointer;
   transition: background-color 0.3s ease, color 0.3s ease;
 }
 
-.nav-link:hover {
+.navbar-dark .navbar-nav .nav-link, a:not([href]):not([tabindex]) {
+  color: white;
+}
+
+.navbar-dark .navbar-nav .nav-link:hover, a:not([href]):not([tabindex]):hover {
   background-color: white;
-  color: black !important;
+  color: black;
 }
 
 .navbar-dark .navbar-toggler {
-  border-color: rgba(255, 255, 255, 1) !important;
+  border-color: rgba(255, 255, 255, 1);
 }
 
 .navbar button.navbar-toggler:hover {
@@ -155,7 +153,7 @@ body {
 }
 
 .navbar-dark .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E") !important;
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
 }
 
 .navbar-toggler:hover .navbar-toggler-icon {
@@ -621,8 +619,9 @@ ul.banner-social-buttons li a:active {
   -o-transform: scale(1.1);
   transform: scale(1.1);
 }
+
 .list-inline > li {
-  padding: 0px !important;
+  padding: 0px;
 }
 
 #linkedin:hover {
