--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -231,6 +231,39 @@ label {
     padding-right: 3px;
 }
 
+.fa-info-circle {
+    color: white;
+    background-color: black;
+    border-radius: 50%;
+    margin-left: 5px;
+    position: relative;
+}
+
+.fa-info-circle::after {
+    content: attr(data-tooltip);
+    position: absolute;
+    bottom: -40px;
+    left: 50%;
+    transform: translateX(-40%);
+    padding: 5px 10px;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    border-radius: 10px;
+    font-size: 1rem;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+    pointer-events: none;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-weight: 400;
+    white-space: nowrap;
+}
+
+.fa-info-circle:hover::after {
+    opacity: 1;
+    visibility: visible;
+}
+
 .cart-container:hover {
     border: 2px solid grey;
     color: #333;
@@ -788,8 +821,14 @@ label {
     .wrap-text {
         display: block;
     }
+}
 
+@media (max-width: 575.98px) {
     .cart-panel, .food-panel {
         width: 80%;
+    }
+
+    .fa-info-circle::after {
+        transform: translateX(50%);
     }
 }
