--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -498,7 +498,8 @@ label {
 }
 
 .card-img {
-    width: 40%;
+    min-width: 40%;
+    max-width: 40%;
     height: 100%;
     border-right: 1px solid #ddd;
     border-radius: 0;
@@ -518,9 +519,12 @@ label {
 .card-text {
     font-size: 0.9rem;
     margin-bottom: 0.5rem;
-    white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    width: 100%;
 }
 
 .card-bottom {
@@ -813,7 +817,7 @@ label {
 
 @media (max-width: 991.98px) {
     .card {
-        height: 150px;
+        height: 175px;
     }
 }
 
