--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -739,7 +739,7 @@ label {
     background-color: white;
     border: 1px solid #ccc;
     border-radius: 8px;
-    padding: 20px;
+    padding: 10px;
     width: 80%;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     position: absolute;
@@ -764,6 +764,7 @@ label {
   
 .info-popup p {
     font-size: 14px;
+    margin-bottom: 0.25rem;
 }
 
 /* -------------- *
