--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -507,12 +507,15 @@ body {
   margin-bottom: 50px;
 }
 
- .proj-img img {
-  height: 300px;
-  max-width: 100%;
-  max-height: 100%;
+.proj-img {
+  height: 325px;
   width: 100%;
   border: 2px solid black;
+}
+
+.proj-img img {
+  width: 100%;
+  height: 100%;
 }
 
 .proj-title {
